# weldbuild

./: .gitignore  README.md  __init__.py  deps.py  packages.py  pyproject.toml
src/weldbuild/: __init__.py
src/weldbuild.egg-info/: PKG-INFO  SOURCES.txt
utils/: modules_make.py  png2ico.py  stdlib_make.py
utils/cmake/: __init__.py
utils/gradle/: __init__.py
weldbuild/: __init__.py  deps.py
