[project]
name = "weldbuild"
version = "1.0.0"
authors = [
    { name = "Dmitriy Lukovenko", email = "mludima23@gmail.com" }
]
description = "Lightweight deployment tool for Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Android",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/a3st/weldbuild"